# server/app/models_registry.py
@@ -5,6 +5,7 @@ from app.events import models as _event_models
 from app.modules.auth import models as _auth_models
 from app.modules.channels import models as _channel_models
 from app.modules.messages import models as _message_models
+from app.modules.notifications import models as _notification_models
 from app.modules.users import models as _user_models
 
 __all__ = [
@@ -13,5 +14,6 @@ __all__ = [
     "_channel_models",
     "_event_models",
     "_message_models",
+    "_notification_models",
     "_user_models",
 ]
